using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class TagManager
{

    //TAGS
    public static string PLAYER_TAG = "Player";
    public static string PLAYER_HEALTH_TAG = "PlayerHealth";

    public static string FENCE_TAG = "Fence";


    // Enemy tags

    public static string BEETLE_TAG = "Beetle";
    public static string SNAIL_TAG = "Snail";


    //Attack and Jump
    public static string RANGED_ATTACK_PARAMETER = "RangedAttack";
    public static string JUMP_PARAMETER = "Jump";
    public static string MELEE_ATTACK_PARAMETER = "Melee";


    // coin tag
    public static string COIN_TAG = "Coin";



    //

    public static string BULLET_TAG = "Bullet";


    public static string LEVEL_1_NAME = "Scene 1";
    public static string LEVEL_2_NAME = "Scene 2";
    public static string LEVEL_3_NAME = "Scene 3";



    public static string ELDER_HOUSE_NAME = "Elder's House";
    public static string ELDER_HOUSE_EXIT_LEVEL1 = "Scene1_ExitFromHouses";


    /*SceneManager.LoadScene(TagManager.LEVEL_3_NAME);

    using UnityEngine;
    using UnityEngine.SceneManagement; */



    public static string MAIN_MENU_NAME = "Main Menu";


    //Names

    //public static string RIGHT_ARM_TAG = "ArmR1";

    //Animations and triggers

    //Idle, Dead, Melee, Ranged Attack, Run, Jump

    /*

public static string RUN_PARAMETER = "Run";
public static string RANGED_ATTACK_PARAMETER = "RangedAttack";
public static string MELEE_ATTACK_PARAMETER = "Melee";


public static string GET_HURT_PARAMETER = "GetHurt";
public static string DEAD_PARAMETER = "Dead";

public static string IDLE_PARAMETER = "Idle";


public static string RANDOM_PARAMETER = "Random";
*/
    //NPCs
    /*
        public static string BLUE_BOY_IDLE = "Idle";
        public static string BLUE_BOY_MOVEMENT = "Move";
        */

    //public static string ZOMBIE_MOVE_ANIMATION = "Move"; for enemies


}

//Level names

/*
 * 
 * 
 *   //public static string ROCKET_MISSILE_TAG = "RocketMissile";
    //public static string FIRE_BULLET_TAG = "FireBullet";
    //public static string ZOMBIE_HEALTH_TAG = "ZombieHealth"; //changing from Zombie Health to ZombieHealth
    //public static string MELEE_WEAPON_TAG = "MeleeWeapon";
    //public static string COIN_TAG = "Coin";
 * 
 * 
 *    //public static string BACKGROUND_TAG = "Background";
    //public static string BULLET_TAG = "Bullet";
 * 
 * 
 * 
    
    public static string TYPE_WEAPON_PARAMETER = "TypeWeapon";
    public static string SWITCH_PARAMETER = "Switch";



}
//class
*/
